--- a/LABS/.settings/org.talend.repository.prefs
+++ b/LABS/.settings/org.talend.repository.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-repository.project.branch=main
+repository.project.branch=branches/v1.2
 repository.project.id=enc\:migration.token.encryption.key\:vde5X2KpndpRwehxEZpWbC3d6CA8Z6CoxFC4a9zjt7Mzuen3qIX41Do\=
